--- a/skins/setup/default/style.css
+++ b/skins/setup/default/style.css
@@ -204,6 +204,7 @@ input:checked + .slider:before {
 
     border-radius: 5px;
 
+    -webkit-backdrop-filter: blur(3px);
     backdrop-filter: blur(3px);
     background-color: rgba(0, 0, 0, 0.25);
 
