--- a/skins/songCard/dietah/style.css
+++ b/skins/songCard/dietah/style.css
@@ -46,29 +46,39 @@
     margin-bottom: 5px;
 
     display: inline-flex;
-    justify-content: space-between;
+    justify-content: flex-end;
 
     line-height: 2em;
 }
 #songCard.top-left #infoGroup, #songCard.bottom-left #infoGroup { flex-direction: row-reverse; }
 #songCard.top-right #infoGroup, #songCard.bottom-right #infoGroup { flex-direction: row; }
 
-#bsrKey {
-    font-family: "walkway", Arial, serif;
-    font-size: 2em;
+#timeBarInfo {
+    margin-top: 10px;
+    display: inline-flex;
+    flex-direction: row;
+    position: absolute;
 }
+#timeToLetters, #totalTimeToLetters {
+    font-family: Arial, "Helvetica Neue", "Helvetica";
+    font-size: 1.1em;
+}
+#timeToLetters:after { content: " /"; margin-right: 5px; }
+#songCard.top-left #timeBarInfo, #songCard.bottom-left #timeBarInfo { right: 20px; }
+#songCard.top-right #timeBarInfo, #songCard.bottom-right #timeBarInfo { left: 20px; }
 
 #mapper {
-    width: 45%;
+    width: 50%;
 
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
     font-size: 1.6em;
-    text-align: center;
 }
 #mapper:before { content: "["; }
 #mapper:after { content: "]"; }
+#songCard.top-left #mapper, #songCard.bottom-left #mapper { margin-left: 20px; text-align: left; }
+#songCard.top-right #mapper, #songCard.bottom-right #mapper { margin-right: 20px; text-align: right; }
 
 #difficulty {
     padding: 0 10px 0 10px;
@@ -94,22 +104,6 @@
 
     line-height: 2em;
 }
-
-#timeBarInfo {
-    width: 100%;
-
-    display: inline-flex;
-    flex-direction: row;
-
-    font-family: Arial, "Helvetica Neue", "Helvetica";
-}
-#songCard.top-left #timeBarInfo, #songCard.bottom-left #timeBarInfo { justify-content: flex-start; }
-#songCard.top-right #timeBarInfo, #songCard.bottom-right #timeBarInfo { justify-content: flex-end; }
-
-#timeToLetters, #totalTimeToLetters {
-    font-size: 1em;
-}
-#timeToLetters:after { content: " /"; margin-right: 5px; }
 
 #songBarLength {
     width: 100%;
@@ -140,22 +134,34 @@
    = SONG TAGS / Performance start =
    ================================= */
 #performanceGroup {
-    width: 100%;
+    width: 60%;
 
     display: inline-flex;
-    justify-content: flex-end;
+    justify-content: space-between;
 
     line-height: 2.5em;
-    font-size: 1.3em;
 }
 #songCard.top-left #performanceGroup, #songCard.bottom-left #performanceGroup { flex-direction: row-reverse; }
 #songCard.top-right #performanceGroup, #songCard.bottom-right #performanceGroup { flex-direction: row; }
 
-#songCard.top-left #miss, #songCard.bottom-left #miss { margin-left: 20px; }
-#songCard.top-right #miss, #songCard.bottom-right #miss { margin-right: 20px; }
+#infoPerformanceGroup {
+    display: inline-flex;
+}
+#songCard.top-left #infoPerformanceGroup, #songCard.bottom-left #infoPerformanceGroup { flex-direction: row-reverse; }
+#songCard.top-right #infoPerformanceGroup, #songCard.bottom-right #infoPerformanceGroup { flex-direction: row; }
+
+#bsrKey {
+    font-family: "walkway", Arial, serif;
+    font-size: 2em;
+}
+
+#songCard.top-left #miss, #songCard.bottom-left #miss { margin-left: 20px; font-size: 1.4em; }
+#songCard.top-right #miss, #songCard.bottom-right #miss { margin-right: 20px; font-size: 1.4em; }
 
 #accuracy {
     width: 70px;
+
+    font-size: 1.7em;
 }
 #accuracy:after { content: "%"; }
 /* ===============================
